# TerraFusionPro

./: .eslintrc.json  .prettierignore  .prettierrc  .replit  AI-VALUATION-README.md  BETA_LAUNCH_PLAN.md  COMPLETE_DEPLOYMENT_PACKAGE.md  CONTINUATION_SUMMARY.md  Dockerfile  FINAL_EXECUTION_SUMMARY.md  FIRST_DEPLOYMENT_SUCCESS_CHECKLIST.md  IMMEDIATE_LAUNCH_GUIDE.md  INSTALLATION_EXPECTATIONS.md  NEXT_PHASE_EXECUTION.md  PRODUCTION_DEPLOYMENT.md  README-TerraField.md  README.md  RUST_INSTALLATION_GUIDE.md  SHOW_PROGRESS.bat  TERRAFUSION_COMPLETE_VISION.md  TERRAFUSION_CRITICAL_PROBLEMS_ANALYSIS.md  TERRAFUSION_ERROR_ANALYSIS_AND_FIXES.md  TERRAFUSION_ERROR_RESOLUTION_REPORT.md  TERRAFUSION_IMPLEMENTATION_ROADMAP.md  TERRAFUSION_LAUNCHER.bat  TERRAFUSION_ONE_CLICK_INSTALLER.bat  TERRAFUSION_WORKSPACE_CLEANUP.bat  TerraFusion Quick Start Guide.md  TerraFusion-PRD.md  TerraFusion-Platform-PRD.md  USER_COMMUNICATION_SUMMARY.md  USER_FRIENDLY_DEPLOYMENT_GUIDE.md  alertmanager.yml  analyze-property.js  api_logs.txt  audit_manifest.md  conversion_agent_api.js  docker-compose.yml  index.html  nx.json  (+38 more)
attached_assets/: DevOps roles.md  ICSF AI-Driven DevOps Framework.md  Junior DevOps Engineer.md  Pasted--Diagnosing-WebSocket-Connection-Failures-in-Replit-Your-log-output-reveals-several-critical-iss-1746209449430.txt  Pasted--Full-Bootstrap-You-re-about-to-activate-a-complete-Post-Review-Ops-Platform-for-TerraFus-1745980131813.txt  (+93 more)
backend/: main.py  (+5 more)
rust_agent/: Cargo.toml
rust_agent/data/: sample_data.csv
rust_agent/src/: agent.rs  fieldmap.rs  main.rs  template.rs
rust_agent/templates/: sample_template.xml
terrafusion_import/: Cargo.toml  README.md
terrafusion_import/src/: lib.rs
terrafusion_import/src/core/: error.rs  importer.rs  mod.rs  schema.rs
terrafusion_rust/: Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile  QUICK_START.md  README.md  START_HERE.md  docker-compose.yml
terrafusion_rust/scripts/: production_bootstrap.sh  quick_start.sh  setup_production.sh
terrafusion_rust/src/: aci_adapter.rs  api.rs  bootstrap.rs  main.rs  mobile.rs
terrafusion_rust/src/agents/: aci_sidecar.rs  base.rs  clickforms_sidecar.rs  compliance.rs  data_processing.rs  env_adapter.rs  mod.rs  rag.rs  sfrep_sidecar.rs  sketch.rs  total_sidecar.rs  uad_adapter.rs  valuation.rs
terrafusion_rust/src/mcp/: client.rs  protocol.rs  server.rs
terrafusion_rust/src/swarm/: orchestrator.rs
(+1010 files in other folders)
