[package]
name = "terrafusion_import"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[lib]
crate-type = ["cdylib", "rlib"]